Changes for 1.1-2 (2025-01-12)
   * predict.blrm: fixed type='fitted' for binary Y; thanks Christian Hametner: <https://discourse.datamethods.org/t/bayesian-regression-modeling-strategies/6105/99>
   * removed Ocens function which is now in rms 7.0

Changes for 1.1-1 (2024-07-07)
   * blrm: added argument showopt to show Stan optimizer steps, default is FALSE
   * blrm: added options(rmsbmsg=FALSE) to allow the user to suppress information messages
   * lrmconppot.stan: fixed bug for dim(C2) p -> q
   * replaced use of survival::survConcordance and Hmisc::somers2 with concordancefit

Changes for 1.1-0 (2024-03-11)
   * Store cppo as deparsed for opt object from optimization (MLE) to prevent huge environment from being carried along
   * blrm: Non-downward compatible changes: removed keepsep argument
   * blrm: Added npcontrast argument for specification of priors for non-proportional-odds parameters in the constrained partial PO model through the use of contrasts, parallel to pcontrast for the PO part of the model; changed 3 stan code modules for this

Changes for 1.0-0 (2023-09-26)
   * blrm: added support for cmdstan and cmdstanr package using backend=
   * When using cmdstan uses bayesplot package for pairs plots
   * stanDx: new code for cmdstan diagnostics
   * stackMI: corrected erroneous implementation of file= where it was only applying to one of the imputations; also handled generally the conversion of functions in fit object to character strings for efficient serializing
   * Added non-exported function cluster so as to not depend on survival package
   * blrm: added sampling.args argument
   * blrm: trapped ppairs error in case plot region too small to hold graph
   * blrm: added pcontrast argument for user-specified priors on linear combinations of regression coefficients; required changing all Stan code
   * blrm: removed priorsd argument (NON-DOWNWARD-COMPATIBLE CHANGE)

Changes for 0.1-0 (2022-04-12)